# NemeioKB-bootloader-sbfsu

./: Package_license.html  Package_license.md  Release_Notes.html
Drivers/BSP/STM32L496-Karmeliet/: circular_buffer.c  circular_buffer.h  stm32l496_karmeliet.c  stm32l496_karmeliet.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_desc.c
Middlewares/ST/STM32_Secure_Engine/Utilities/KeysAndImages/: keys.py  prepareimage.py  requirements.txt
Middlewares/ST/STM32_WPAN/: stm32_wpan_common.h
Middlewares/ST/STSAFE_A1xx/CoreModules/Inc/: stsafea_core.h
Middlewares/ST/STSAFE_A1xx/CoreModules/Src/: stsafea_core.c
Projects/: Release_Notes.html  STM32SBSFUProjectsList.html  STM32SBSFUProjectsList.md
Projects/32L496GDISCOVERY/Applications/2_Images/2_Images_SBSFU/Core/Inc/: app_hw.h
Projects/32L496GDISCOVERY/Applications/2_Images/2_Images_SBSFU/SW4STM32/STM32L496G-Discovery_2_Images_SBSFU/: .project
Projects/32L496GDISCOVERY/Applications/2_Images/2_Images_SECoreBin/SW4STM32/STM32L496G-Discovery_2_Images_SECoreBin/: .cproject  .project
Projects/32L496GDISCOVERY/Applications/2_Images_OSC/2_Images_SBSFU/EWARM/: Project.ewp
Projects/32L496GDISCOVERY/Applications/2_Images_OSC/2_Images_SBSFU/SW4STM32/STM32L496G-Discovery_2_Images_SBSFU/: .cproject  .project
Projects/32L496GDISCOVERY/Applications/2_Images_OSC/2_Images_SECoreBin/SW4STM32/STM32L496G-Discovery_2_Images_SECoreBin/: .cproject  .project
Projects/32L496GDISCOVERY/Applications/2_Images_OSC/2_Images_UserApp/SW4STM32/STM32L496G-Discovery_2_Images_UserApp/: .cproject  .project  STM32L496AGIx_FLASH.ld
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SBSFU/: CMakeLists.txt
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SBSFU/Core/Inc/: app_hw.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SBSFU/Core/Src/: main.c  stm32l4xx_it.c
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SBSFU/EWARM/: Project.ewp
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SBSFU/SBSFU/App/: app_sfu.h  sfu_backup_registers.h  sfu_backup_registers_write.c  sfu_backup_registers_write.h  sfu_boot.c  sfu_fwimg_swap.c  sfu_leds.c  sfu_leds.h  sfu_new_image.c
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SBSFU/SW4STM32/: sfu_secorebin_Inc.c
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SBSFU/SW4STM32/STM32L496-Karmeliet_2_Images_SBSFU/: .cproject  .project  STM32L496VGTx_FLASH.ld  postbuild.sh
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SECoreBin/: CMakeLists.txt
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SECoreBin/SW4STM32/: SECBOOT_ECCDSA_WITH_AES128_CBC_SHA256.sh  prebuild.sh
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_SECoreBin/SW4STM32/STM32L496-Karmeliet_2_Images_SECoreBin/: .project  STM32L496VGTx_FLASH.ld
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_UserApp/Inc/: main.h
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_UserApp/SW4STM32/STM32L496-Karmeliet_2_Images_UserApp/: .cproject  .project  STM32L496AGIx_FLASH.ld  STM32L496VGTx_FLASH.ld
Projects/STM32L496-Karmeliet/Applications/2_Images/2_Images_UserApp/Src/: stm32l4xx_it.c
Projects/STM32L496-Karmeliet/Applications/2_Images/Linker_Common/SW4STM32/: mapping_fwimg.ld  mapping_sbsfu.ld
doc/SBOM/: sbom_nemeio_stm32_bootloader.json
